--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -109,7 +109,9 @@
                           },
                           "button": {
                             "font-family": "Raleway, sans-serif",
-                            "font-weight": "bold",
+                            "font-weight": "700",
+
+                            "font-style": "italic",
                             "font-size": "18px",
                             "padding-top": "17px",
                             "padding-bottom": "17px",
@@ -180,7 +182,9 @@
                           },
                           "button": {
                             "font-family": "Raleway, sans-serif",
-                            "font-weight": "bold",
+                            "font-weight": "700",
+
+                            "font-style": "italic",
                             "font-size": "18px",
                             "padding-top": "17px",
                             "padding-bottom": "17px",
@@ -204,7 +208,9 @@
                           },
                           "title": {
                             "font-family": "Helvetica Neue, sans-serif",
-                            "font-weight": "bold",
+                            "font-weight": "700",
+
+                            "font-style": "italic",
                             "font-size": "26px",
                             "color": "#4c4c4c"
                           },
@@ -245,7 +251,9 @@
                         "styles": {
                           "button": {
                             "font-family": "Raleway, sans-serif",
-                            "font-weight": "bold",
+                            "font-weight": "700",
+
+                            "font-style": "italic",
                             "font-size": "18px",
                             "padding-top": "17px",
                             "padding-bottom": "17px",
@@ -324,7 +332,9 @@
                         "styles": {
                       "toggle": {
                         "font-family": "Raleway, sans-serif",
-                        "font-weight": "bold",
+                        "font-weight": "700",
+
+                            "font-style": "italic",
                         "background-color": "#0b1215",
                         ":hover": {
                           "background-color": "#131f24"
