--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -108,7 +108,9 @@
                       },
                       "button": {
                         "font-family": "Raleway, sans-serif",
-                        "font-weight": "bold",
+                        "font-weight": "700",
+
+                            "font-style": "italic",
                         "font-size": "18px",
                         "padding-top": "17px",
                         "padding-bottom": "17px",
@@ -178,7 +180,9 @@
                       },
                       "button": {
                         "font-family": "Raleway, sans-serif",
-                        "font-weight": "bold",
+                        "font-weight": "700",
+
+                            "font-style": "italic",
                         "font-size": "18px",
                         "padding-top": "17px",
                         "padding-bottom": "17px",
@@ -202,7 +206,9 @@
                       },
                       "title": {
                         "font-family": "Helvetica Neue, sans-serif",
-                        "font-weight": "bold",
+                        "font-weight": "700",
+
+                            "font-style": "italic",
                         "font-size": "26px",
                         "color": "#4c4c4c"
                       },
@@ -243,7 +249,9 @@
                     "styles": {
                       "button": {
                         "font-family": "Raleway, sans-serif",
-                        "font-weight": "bold",
+                        "font-weight": "700",
+
+                            "font-style": "italic",
                         "font-size": "18px",
                         "padding-top": "17px",
                         "padding-bottom": "17px",
@@ -322,7 +330,9 @@
                     "styles": {
                       "toggle": {
                         "font-family": "Raleway, sans-serif",
-                        "font-weight": "bold",
+                        "font-weight": "700",
+
+                            "font-style": "italic",
                         "background-color": "#0b1215",
                         ":hover": {
                           "background-color": "#131f24"
