--- a/store/mcr-004/index.html
+++ b/store/mcr-004/index.html
@@ -109,7 +109,9 @@
                     },
                     "button": {
                       "font-family": "Raleway, sans-serif",
-                      "font-weight": "bold",
+                      "font-weight": "700",
+
+                            "font-style": "italic",
                       "font-size": "18px",
                       "padding-top": "17px",
                       "padding-bottom": "17px",
@@ -179,7 +181,9 @@
                     },
                     "button": {
                       "font-family": "Raleway, sans-serif",
-                      "font-weight": "bold",
+                      "font-weight": "700",
+
+                            "font-style": "italic",
                       "font-size": "18px",
                       "padding-top": "17px",
                       "padding-bottom": "17px",
@@ -203,7 +207,9 @@
                     },
                     "title": {
                       "font-family": "Helvetica Neue, sans-serif",
-                      "font-weight": "bold",
+                      "font-weight": "700",
+
+                            "font-style": "italic",
                       "font-size": "26px",
                       "color": "#4c4c4c"
                     },
@@ -244,7 +250,9 @@
                   "styles": {
                     "button": {
                       "font-family": "Raleway, sans-serif",
-                      "font-weight": "bold",
+                      "font-weight": "700",
+
+                            "font-style": "italic",
                       "font-size": "18px",
                       "padding-top": "17px",
                       "padding-bottom": "17px",
@@ -323,7 +331,9 @@
                   "styles": {
                     "toggle": {
                       "font-family": "Raleway, sans-serif",
-                      "font-weight": "bold",
+                      "font-weight": "700",
+
+                            "font-style": "italic",
                       "background-color": "#0b1215",
                       ":hover": {
                         "background-color": "#131f24"
