--- a/store/mcr-016-cd/index.html
+++ b/store/mcr-016-cd/index.html
@@ -113,7 +113,9 @@
                           },
                           "button": {
                             "font-family": "Raleway, sans-serif",
-                            "font-weight": "bold",
+                            "font-weight": "700",
+
+                            "font-style": "italic",
                             "font-size": "18px",
                             "padding-top": "17px",
                             "padding-bottom": "17px",
@@ -184,7 +186,9 @@
                           },
                           "button": {
                             "font-family": "Raleway, sans-serif",
-                            "font-weight": "bold",
+                            "font-weight": "700",
+
+                            "font-style": "italic",
                             "font-size": "18px",
                             "padding-top": "17px",
                             "padding-bottom": "17px",
@@ -208,7 +212,9 @@
                           },
                           "title": {
                             "font-family": "Helvetica Neue, sans-serif",
-                            "font-weight": "bold",
+                            "font-weight": "700",
+
+                            "font-style": "italic",
                             "font-size": "26px",
                             "color": "#4c4c4c"
                           },
@@ -249,7 +255,9 @@
                         "styles": {
                           "button": {
                             "font-family": "Raleway, sans-serif",
-                            "font-weight": "bold",
+                            "font-weight": "700",
+
+                            "font-style": "italic",
                             "font-size": "18px",
                             "padding-top": "17px",
                             "padding-bottom": "17px",
@@ -328,7 +336,9 @@
                         "styles": {
                       "toggle": {
                         "font-family": "Raleway, sans-serif",
-                        "font-weight": "bold",
+                        "font-weight": "700",
+
+                            "font-style": "italic",
                         "background-color": "#0b1215",
                         ":hover": {
                           "background-color": "#131f24"
