--- a/acid-baptism/index.html
+++ b/acid-baptism/index.html
@@ -163,5 +163,7 @@
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
     <script src="../../assets/scripts/YoutubeEmbed.js"></script>
+    <script src="../../assets/scripts/CartToggleSticky.js"></script>
+    <script src="../../assets/scripts/CartToggleSticky.js"></script>
     </body>
 </html>
