--- a/powdr/index.html
+++ b/powdr/index.html
@@ -209,5 +209,6 @@
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
     <script src="../../assets/scripts/McrPlayer.js"></script>
     <script src="../../assets/scripts/YoutubeEmbed.js"></script>
+    <script src="../../assets/scripts/CartToggleSticky.js"></script>
     </body>
 </html>
