started download page

--- a/roster/index.html
+++ b/roster/index.html
@@ -55,7 +55,7 @@
           <a href="../acid-baptism/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/acid-baptism/acid-baptism-portrait.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/acid-baptism/acid-baptism-portrait.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -68,7 +68,7 @@
           <a href="../cryhard/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/cryhard/cryhard-band.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/cryhard/cryhard-band.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -81,7 +81,7 @@
           <a href="../donovan-funk/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/donovan-funk/donovan-funk-portrait-square.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/donovan-funk/donovan-funk-portrait-square.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -94,7 +94,7 @@
           <a href="../feverest/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/feverest/feverest-band.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/feverest/feverest-band.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -107,7 +107,7 @@
           <a href="../foam/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/foam/foam-band.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/foam/foam-band.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -120,7 +120,7 @@
           <a href="../hobbyist/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/hobbyist/hobbyist-portrait.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/hobbyist/hobbyist-portrait.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -133,7 +133,7 @@
           <a href="../idiot-mile/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/idiot-mile/idiot-mile-live.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/idiot-mile/idiot-mile-live.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -146,7 +146,7 @@
           <a href="../pageant-dad/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/pageant-dad/pageant-dad-portrait.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/pageant-dad/pageant-dad-portrait.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -159,7 +159,7 @@
           <a href="../panhandle/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/panhandle/panhandle-portrait.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/panhandle/panhandle-portrait.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -172,7 +172,7 @@
           <a href="../powdr/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/powdr/powdr-promo.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/powdr/powdr-promo.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -185,7 +185,7 @@
           <a href="../sliderhand/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/sliderhand/sliderhand-portraitv2.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/sliderhand/sliderhand-portraitv2.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -198,7 +198,7 @@
           <a href="../sweetest-pot/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/sweetest-pot/sweetest-pot-portrait.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/sweetest-pot/sweetest-pot-portrait.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -211,7 +211,7 @@
           <a href="../toad-socks/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/toad-socks/toad-socks-band.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/toad-socks/toad-socks-band.webp" loading="eager" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
