--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -410,15 +410,15 @@
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li>Sorcerer's Tome - Cryhard</li>
-              <li>benchmark - Kitchen Slug</li>
-              <li>Cursed - Idiot Mile</li>
-              <li>Flawed me - Always Last</li>
-              <li>Unwilted Stutter - Hobbyist.</li>
-              <li>Love Potions - Sweetest Pot</li>
-              <li>Tied up - Settling…</li>
-              <li>late at night - acid baptism</li>
-              <li>Noytama / Nola - Toad Socks</li>
+              <li>Cryhard - Sorcerer's Tome</li>
+              <li>Kitchen Slug - benchmark</li>
+              <li>Idiot Mile - Cursed</li>
+              <li>Always Last - Flawed me</li>
+              <li>Hobbyist. - Unwilted Stutter</li>
+              <li>Sweetest Pot - Love Potions</li>
+              <li>Settling… - Tied up</li>
+              <li>acid baptism - late at night</li>
+              <li>Toad Socks - Noytama / Nola</li>
             </ol>
           </div>
           <hr class="separator">
