--- a/store/mcr-016-cd/index.html
+++ b/store/mcr-016-cd/index.html
@@ -414,18 +414,18 @@
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li>Outta Control - powdr</li>
-              <li>Redundant - Easier</li>
-              <li>Menace to Sobriety - Morris Village</li>
-              <li>Godsend - Pageant Dad</li>
-              <li>What A Shame - Feverest</li>
-              <li>Playing Dead - Foam</li>
-              <li>Sand - Gabriel Hancock & the Sick Forms</li>
-              <li>Someday pt. 1 - Compost Adjacent</li>
-              <li>Boss Fite - acid baptism</li>
-              <li>Absolutely Garibaldi - Computer Girl</li>
-              <li>Avalanche - sockbones</li>
-              <li>Ski Lift - Sweetest Pot</li>
+              <li>powdr - Outta Control</li>
+              <li>Easier - Redundant</li>
+              <li>Morris Village - Menace to Sobriety</li>
+              <li>Pageant Dad - Godsend</li>
+              <li>Feverest - What A Shame</li>
+              <li>Foam - Playing Dead</li>
+              <li>Gabriel Hancock & the Sick Forms - Sand</li>
+              <li>Compost Adjacent - Someday pt. 1</li>
+              <li>acid baptism - Boss Fite</li>
+              <li>Computer Girl - Absolutely Garibaldi</li>
+              <li>sockbones - Avalanche</li>
+              <li>Sweetest Pot - Ski Lift</li>
             </ol>
           </div>
           <hr class="separator">
