--- a/dl/sidequestsvol2-ezw7gRtzgJ72F9/index.html
+++ b/dl/sidequestsvol2-ezw7gRtzgJ72F9/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <section class="download-card" aria-label="Download options">
-          <a id="downloadBtn" class="btn-primary" href="#" download>
+          <a id="downloadBtn" class="btn-primary" href="https://pub-88972048ad404e079668f097520377f3.r2.dev/Side%20Quests%20Vol.%202/Side%20Quests%20Vol.%202.zip" download>
             Download Full Album
           </a>
 
@@ -74,9 +74,9 @@
         <section class="links-card" aria-label="Streaming links">
           <h2 class="section-title">Prefer to stream?</h2>
           <div class="link-grid">
-            <a class="pill" href="#" target="_blank" rel="noopener">Apple Music</a>
-            <a class="pill" href="#" target="_blank" rel="noopener">Spotify</a>
-            <a class="pill" href="#" target="_blank" rel="noopener">Bandcamp</a>
+            <a class="pill" href="https://music.apple.com/us/home" target="_blank" rel="noopener">Apple Music</a>
+            <a class="pill" href="https://open.spotify.com//." target="_blank" rel="noopener">Spotify</a>
+            <a class="pill" href="https://music.youtube.com/" target="_blank" rel="noopener">YouTube Music</a>
           </div>
           <p class="fineprint">
             Streaming links optional—this NFC copy is yours to keep.
@@ -96,7 +96,7 @@
             </li>
           </ol>
           <p class="help-small">
-            Still stuck? Email <a class="inline-link" href="mailto:contact@mysteryclassrecords.com">contact@mysteryclassrecords.com</a>.
+            Still stuck? Email <a class="inline-link" href="mailto:contact@mysteryclassrecords.com">mysteryclassrecords@gmail.com</a>.
           </p>
         </section>
 
