--- a/dl/sidequestsvol2-ezw7gRtzgJ72F9/index.html
+++ b/dl/sidequestsvol2-ezw7gRtzgJ72F9/index.html
@@ -84,17 +84,19 @@
         </section>
 
         <section id="help" class="help-card" aria-label="Download help">
-          <h2 class="section-title">If your download didn't start</h2>
-          <ol class="help-list">
-            <li>Tap <span class="kbd">Download Full Album</span> again.</li>
-            <li>
-              <strong>iPhone/iPad:</strong> Open the <span class="kbd">Files</span> app → <span class="kbd">Downloads</span>.
-              If it's a ZIP, tap it once to unzip.
-            </li>
-            <li>
-              <strong>Android:</strong> Check your notification tray or open <span class="kbd">Files</span> → <span class="kbd">Downloads</span>.
-            </li>
-          </ol>
+          <h2 class="section-title">If your download didn’t start</h2>
+            <ol class="help-list">
+              <li>Tap <span class="kbd">Download Full Album</span> again.</li>
+              <li>
+                <strong>iPhone/iPad:</strong> Tap <span class="kbd">More…</span> → 
+                <span class="kbd">Save to Files</span>, choose a location, then open the 
+                <span class="kbd">Files</span> app and tap the ZIP to unzip it.
+              </li>
+              <li>
+                <strong>Android:</strong> Check your notification tray or open 
+                <span class="kbd">Files</span> → <span class="kbd">Downloads</span>.
+              </li>
+            </ol>
           <p class="help-small">
             Still stuck? Email <a class="inline-link" href="mailto:contact@mysteryclassrecords.com">mysteryclassrecords@gmail.com</a>.
           </p>
