--- a/dl/sidequestsvol2-ezw7gRtzgJ72F9/index.html
+++ b/dl/sidequestsvol2-ezw7gRtzgJ72F9/index.html
@@ -85,18 +85,15 @@
 
         <section id="help" class="help-card" aria-label="Download help">
           <h2 class="section-title">If your download didn’t start</h2>
-            <ol class="help-list">
-              <li>Tap <span class="kbd">Download Full Album</span> again.</li>
-              <li>
-                <strong>iPhone/iPad:</strong> Tap <span class="kbd">More…</span> → 
-                <span class="kbd">Save to Files</span>, choose a location, then open the 
-                <span class="kbd">Files</span> app and tap the ZIP to unzip it.
-              </li>
-              <li>
-                <strong>Android:</strong> Check your notification tray or open 
-                <span class="kbd">Files</span> → <span class="kbd">Downloads</span>.
-              </li>
-            </ol>
+          <ol class="help-list">
+            <li>Tap <span class="kbd">Download Full Album</span> again and press <span class="kbd">Download</span> in the pop-up.</li>
+            <li>
+              <strong>iPhone/iPad:</strong> Tap the down arrow next to the address bar, open <span class="kbd">Downloads</span>, then tap the file to open it in the <span class="kbd">Files</span> app. Tap the ZIP once to unzip.
+            </li>
+            <li>
+              <strong>Android:</strong> Check your notification tray or open <span class="kbd">Files</span> → <span class="kbd">Downloads</span>.
+            </li>
+          </ol>
           <p class="help-small">
             Still stuck? Email <a class="inline-link" href="mailto:contact@mysteryclassrecords.com">mysteryclassrecords@gmail.com</a>.
           </p>
