just need tracklists

--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
     <div class="store-section">
       <div class="store-grid">
 
+        <a href="store/mcr-014-cd/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="assets/images/products/mcr-014/mcr-014-cd.webp" alt="" class="merch-block-product-image default-image">
+                <img src="assets/images/products/mcr-014/mcr-014-cd-hover.webp" alt="" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Garden Ants</p>
+                  <p class="merch-block-product-name">Workhorse - CD</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$12</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="store/mcr-014/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="assets/images/products/mcr-014/mcr-014.webp" alt="" class="merch-block-product-image default-image">
+                <img src="assets/images/products/mcr-014/mcr-014-hover.webp" alt="" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Garden Ants</p>
+                  <p class="merch-block-product-name">Workhorse - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
         <a href="store/mcr-016-cd/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
@@ -348,78 +384,6 @@
             </div>
           </div>
         </a>
-
-        <a href="store/mcr-003/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$10</div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-        <a href="store/mcr-001/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
-                <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$10</div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-        <a href="store/mcr-002/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">CRYHARD</p>
-                <p class="merch-block-product-name">OF COURSE I WILL - CASSETTE</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$10</div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-        <!-- <a href="store/new-001/" class="merch-link">
-          <div class="merch-block">
-            <div class="merch-block-image-container">
-              <img src="assets/images/products/new-001/new-001.webp" alt="" class="merch-block-product-image default-image">
-              <img src="assets/images/products/new-001/new-001-hover.webp" alt="" class="merch-block-product-image hover-image">
-            </div>
-            <div class="merch-block-details-container">
-              <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">Portable Cassette Player</p>
-                <p class="merch-block-product-name">Transparent</p>
-              </div>
-              <div class="merch-block-price-container">
-                <div class="merch-block-price">$25</div>
-              </div>
-            </div>
-          </div>
-        </a> -->
 
       </div>
     </div>
