--- a/store/index.html
+++ b/store/index.html
@@ -51,6 +51,42 @@
         <h1 class="store-heading">STORE</h1>
         <div class="store-grid">
 
+          <a href="mcr-014-cd/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-014/mcr-014-cd.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-014/mcr-014-cd-hover.webp" alt="" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Garden Ants</p>
+                  <p class="merch-block-product-name">Workhorse - CD</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$12</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-014/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-014/mcr-014.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-014/mcr-014-hover.webp" alt="" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Garden Ants</p>
+                  <p class="merch-block-product-name">Workhorse - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
           <a href="mcr-016-cd/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
