--- a/store/mcr-014/index.html
+++ b/store/mcr-014/index.html
@@ -409,14 +409,14 @@
 
             </div>
           </div>
-          <hr class="separator">
+          <!-- <hr class="separator">
           <div class="track-list">
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
               <li></li>
             </ol>
-          </div>
+          </div> -->
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Info:</h3>
