--- a/store/mcr-014/index.html
+++ b/store/mcr-014/index.html
@@ -409,14 +409,24 @@
 
             </div>
           </div>
-          <!-- <hr class="separator">
+          <hr class="separator">
           <div class="track-list">
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li></li>
+              <li>On The Train wyd?</li>
+              <li>Today Was Worse Than 100 September 11th's</li>
+              <li>Twin Telepathy</li>
+              <li>Fallen Colony</li>
+              <li>Milo of Croton</li>
+              <li>The Might Thumb</li>
+              <li>Harry Pothead: The Sorcerer's Stoned</li>
+              <li>Pokémon Black & White For The Nintendo DS®</li>
+              <li>San Franciscopalian</li>
+              <li>Spicy McChicken pt. 1</li>
+              <li>Spicy McChicken pt. 2</li>
             </ol>
-          </div> -->
+          </div>
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Info:</h3>
